# qqn-optimizer

./: .gitignore  .gitmodules  Abstract  CITATION.cff  Cargo.toml  LICENSE  README.md  [derive(Debug,  [test]  html2tex.py  install_onednn.py  notes.md  paper.md  process_result_md.sh  process_results.sh  process_results_md.sh  process_results_tex.sh  qqn_corrected_paper.md  run_academic_study.sh  test_unified_minimal  test_unified_minimal.rs
.github/workflows/: ci.yml
benches/: performance_benchmarks.rs
benchmark_results_20250714_041307/: benchmark_report.html  detailed_results.csv  summary_statistics.csv
docker/: Dockerfile
docs/: adaptive_tournament.md  algorithm.md  benchmarking_and_reporting.md  core.md  fashion_mnist.md  formatting.md  geometry.md  installation.md  intuitive_derivation.md  line_search_citations.md  line_search_methods.md  notes.md  novelty.md  onednn_mnist.md  opt_schema.md  optimizers.md  optimizers_citations.md  problems.md  problems_citations.md  reporting.md  result_analysis.md  result_analysis_prompt.md  rust.md  spec.md  statistics.md  steepest_path.md  test.md  tournament.md  unified_reporting.md
docs/paper/: combined.md  content.tex  paper.bbl  paper.tex  render.sh
docs/paper_parts/: benchmark.md  combined.md  content.tex  idea.md  paper.tex  references.bib  render.sh  results.md
docs/prompts/: critical_paper_review.md  paper_authoring.md
examples/: basic_usage.rs  benchmark_comparison.rs  custom_problem.rs  fashion_mnist_demo.rs  onednn_mnist.rs
experiments/configs/: qqn_validation.yaml
latex_output_20250716_033413/: performance_table.tex  significance_table.tex
latex_output_20250716_034014/: significance_table.tex
paper/: appendix.md  appendix.tex  aurthur.md  benchmark.md  combined.md  content.md  content.tex  paper.bbl  paper.tex  paper_rendered.md  paper_template.tex  pirate.md  references.bib  render.sh
paper/analysis/: detailed_results.csv  raw_results.csv  summary_statistics.csv
paper/tables/: performance_table.tex
papers/: tfpaper.html
papers/intro/: appendix.md  appendix.tex  content.md  content.tex  idea.md  paper.bbl  paper.tex  paper_rendered.md  references.bib  render.sh  render2.sh
papers/theory/: appendix.md  appendix.tex  content.md  content.tex  paper.bbl  paper.tex  paper_rendered.md  references.bib  render.sh
reproducibility/: README.md  run_academic_study.sh
reproducibility/src/: config.rs  lib.rs
reproducibility/tests/: benchmark_experiments.rs  integration_tests.rs  performance_analysis.rs
results/calibration_all_optimizers_20250728_135452/: benchmark_report.md  (+1430 more)
src/: config.rs  lib.rs  main.rs
tests/: adaptive_benchmark_reports.rs  benchmark_analytic_experiments.rs  benchmark_champions.rs  benchmark_cross_sets.rs  benchmark_experiments.rs  benchmark_fast.rs  benchmark_ml_experiments.rs  benchmark_mnist_experiments.rs  benchmark_reports.rs  benchmark_test.rs  fashion_mnist_test.rs  integration_tests.rs  performance_analysis.rs  report_generator_test.rs  unified_reports.rs
(+10021 files in other folders)
