[package]
name = "qqn-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
rand = { version = "0.8", features = ["small_rng", "std"] }
approx = "0.5"
candle-core = "0.9.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
humantime-serde = "1.1"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "svg_backend", "line_series", "point_series", "bitmap_encoder"] }
bincode = "1.3"
tempfile = "3.8"
proptest = "1.4"
half = { version = "2.3", features = ["bytemuck", "num-traits", "serde", "rand_distr"] }
rand_distr = { version = "0.4", features = ["std"] }
criterion = { version = "0.6.0", features = ["plotters"] }