[package]
name = "qqn-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
luminal = { path = "luminal" }
luminal_training = { path = "luminal/crates/luminal_training" }
luminal_nn = { path = "luminal/crates/luminal_nn" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
rand = { version = "0.9.1", features = ["small_rng", "std"] }
approx = "0.5.1"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.46.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde", "clock"] }
serde_json = "1.0"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "svg_backend", "line_series", "point_series", "bitmap_encoder", "ttf"], optional = true }
tempfile = "3.8"
log = "0.4.27"
num_cpus = "1.16"
statrs = "0.18.0"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
html-escape = "0.2.13"
itertools = "0.13.0"
dfdx = { version = "0.13", features = ["f16"] }

[features]
default = ["plotting"]
plotting = ["plotters"]